--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0531.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0531.html
@@ -355,9 +355,14 @@
             <ins class="alt" title="nlp 1.00">Αἰθίοπος</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1329 495 1403 550">
+        <span id="w_66_0" class="ocr_word" title="bbox 1329 495 1403 550">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 1329 495 1403 550">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1426 511 1598 550" lang="grc">
@@ -368,11 +373,6 @@
         <span id="w_68" class="ocr_word" title="bbox 1620 510 1750 549" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρόνῳ</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1773 510 1826 538" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰς</ins>
           </span>
         </span>
       </span>
@@ -533,16 +533,11 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1681 701 1825 755" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀχωρί-</ins>
+            <ins title="nlp 2.00">ἀχωρίστως.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 770 1825 825">
-        <span id="w_102" class="ocr_word" title="bbox 151 783 261 813" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στως.</ins>
-          </span>
-        </span>
         <span id="w_103" class="ocr_word" title="bbox 314 770 375 809" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -744,9 +739,9 @@
             <ins class="alt" title="nlp 1.00">δύνασαι</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 1803 979 1885 1015">
+        <span id="w_143_0" class="ocr_word" title="bbox 1803 979 1885 1015">
           <span class="alternatives">
-            <ins title="nlp 2.00">199ν</ins>
+            <ins class="alt" title="nlp 2.00">199v</ins>
           </span>
         </span>
       </span>
@@ -843,9 +838,9 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1667 1115 1827 1166" lang="grc">
+        <span id="w_162_0" class="ocr_word" title="bbox 1667 1115 1827 1166">
           <span class="alternatives">
-            <ins title="nlp 2.00">γλαυχόφθαλμον</ins>
+            <ins class="alt" title="nlp 2.00">γλαυκόφθαλμον</ins>
           </span>
         </span>
       </span>
@@ -1159,16 +1154,11 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1752 1797 1826 1822" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δια-</ins>
+            <ins title="nlp 2.00">διαφορᾶς·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 1853 1830 1910">
-        <span id="w_225" class="ocr_word" title="bbox 151 1871 290 1910" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φορᾶς·</ins>
-          </span>
-        </span>
         <span id="w_226" class="ocr_word" title="bbox 335 1871 370 1896" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τί</ins>
@@ -1633,7 +1623,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1602 2262 1720 2316" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅπου</ins>
+            <ins title="nlp 2.00">(ὅπου</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1758 2276 1830 2315" lang="grc">
@@ -2392,7 +2382,7 @@
         </span>
         <span id="w_463" class="ocr_word" title="bbox 416 3185 453 3227">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.)</ins>
+            <ins title="nlp 2.00">l.)</ins>
           </span>
         </span>
         <span id="w_464" class="ocr_word" title="bbox 483 3185 541 3218">
